feat: Implements historical search
