# src/controllers/YahooApi.js
@@ -3,7 +3,7 @@
 var utils = require('../utils/writer.js');
 var YahooApi = require('../service/YahooApiService');
 
-module.exports.getYahooPriceTicker = function getYahooPriceTicker (req, res, next) {
+module.exports.getYahooPriceTicker = function (req, res, next) {
   YahooApi.getYahooPriceTicker(req.swagger.params.ticker.value)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -13,7 +13,7 @@ module.exports.getYahooPriceTicker = function getYahooPriceTicker (req, res, nex
     });
 };
 
-module.exports.getYahooPriceTickerArray = function getYahooPriceTicker (req, res, next) {
+module.exports.getYahooPriceTickerArray = function (req, res, next) {
   YahooApi.getYahooPriceTicker(req.swagger.params.ticker.value)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -22,5 +22,19 @@ module.exports.getYahooPriceTickerArray = function getYahooPriceTicker (req, res
       utils.writeJson(res, response);
     });
 };
+
+module.exports.getMonthlyHistoricalData = function (req, res, next) {
+  const tickers = req.swagger.params.ticker.value;
+  const startDate = req.swagger.params.startDate.value;
+  const endDate = req.swagger.params.endDate.value;
+
+  YahooApi.getMonthlyHistoricalData(tickers, startDate, endDate)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+}
 
 
